--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-qr-code": "^1.1.1",
     "react-qr-reader": "^2.2.1",
     "react-qr-scanner": "^1.0.0-alpha.7",
     "react-redux": "^7.2.3",
@@ -20,6 +21,7 @@
     "react-scripts": "^4.0.3",
     "react-swipeable-views": "^0.13.9",
     "react-webcam-barcode-scanner": "0.0.2-rc2",
+    "reactive-qr": "^0.1.8",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
