--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-recaptcha": "^2.1.0",
+    "react-invisible-recaptcha": "^0.3.1",
     "react-qr-code": "^1.1.1",
     "react-qr-reader": "^2.2.1",
     "react-qr-scanner": "^1.0.0-alpha.7",
+    "react-recaptcha": "^2.3.10",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
